# sde_py

./: .gitignore  INTERNALS.md  LIMITATIONS.md  README.md  TUTORIAL.md  main.py  pyproject.toml
sde/: __init__.py  compiler.py  env.py  model.py  parser.py  result.py  runner.py
sde/_data/: node_runner.mjs
