[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sde-py"
version = "0.1.0"
description = "Python interface to SDEverywhere — fast Vensim model execution via Node.js"
requires-python = ">=3.9"
dependencies = ["pandas"]

[project.scripts]
sde-setup = "sde.env:setup_cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sde = ["_data/*.mjs"]
